Obfuscate estimated value in index.html

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                 <tr><td>Search Intent</td><td>"Smart Betting", "Pro Odds"</td></tr>
                 <tr><td>Brand Potential</td><td>High (Scalable globally)</td></tr>
             </table>
-            <div class="price-highlight">Estimated Value: $25,000 - $85,000</div>
+            <div class="price-highlight">Estimated Value: $**,*** - $***,***</div>
             <p style="text-align:center; color:#666; font-size:0.8rem; margin-top:10px;">*Based on 2026 sales of premium "Intelligence + Gambling" keywords.</p>
         </div>
     </section>
