Uncomment logo styles in index.html

--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
         }
         .logo-box { display: flex; align-items: center; gap: 10px; }
         .logo-img { height: 40px; border-radius: 8px; }
-     /* ---   .logo-text { font-family: 'Orbitron', sans-serif; font-size: 1.5rem; letter-spacing: 2px; } --- */
+        .logo-text { font-family: 'Orbitron', sans-serif; font-size: 1.5rem; letter-spacing: 2px; }
         
         .logo-text { font-family: 'Playfair Display', serif; font-size: 1.8rem; color: var(--gold); }
-    /* ---    .logo-img { height: 50px; } --- */
+        .logo-img { height: 50px; }
         nav a { color: var(--text-light); text-decoration: none; margin-left: 25px; font-weight: 600; font-size: 0.9rem; }
 
         /* --- Hero Section --- */
