--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <nav>
             <a href="#market">Markets</a>
             <a href="#data">Data</a>
-            <a href="https://www.atom.com/name/brilliantodds" class="btn btn-gold" style="padding: 10px 20px;">Buy Domain</a>
+            <a href="https://www.atom.com/name/brilliantodds" class="btn btn-gold" style="padding: 10px 20px;">Buy</a>
         </nav>
     </header>
 
